2004-08-10  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlValidatingReader.cs : Replaced XmlSchemaCollection with
	  XmlSchemaSet. Added Settings property override

2004-08-10  Atsushi Enomoto  <atsushi@ximian.com>

	* DTDReader.cs : Replacing XmlSchemaDatatype .FromName(string) with
	  .FromName(string, string) [going to remove former one; it is not
	  good to support xdt:blah datatypes].

2004-08-03  Atsushi Enomoto  <atsushi@ximian.com>

	* DTDValidatingReader.cs,
	  XmlValidatingReader.cs : implemented IXmlNamespaceResolver.
	* XmlNamespaceManager.cs,
	  XmlNodeReader.cs : implemented GetNamespacesInScope().

2004-08-03  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlCharacterData.cs,
	  XmlDocument.cs,
	  XmlNodeChangedEventArgs.cs : 
	  Implemented XmlNodeChangedEventArgs.OldValue and .NewValue.

2004-08-03  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlWriter.cs : implemented settings-less Create().
	* XmlWriterSettings.cs : added some comments.

2004-07-29  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlWriter.cs : implemented WriteNode(XPathNavigator, bool) 
	  incompletely, using XPathNavigator.ReadSubtree().

2004-07-29  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlReader.cs : Implemented new 2.0 virtual members that used to be
	  abstract in 1.x. Implemented ReadSubtree().

2004-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlTextReader.cs: Stop parsing when a null character is found.

2004-07-28  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlReader.cs : Implemented missing MoveToNextSibling() and
	  MoveToDescendant().
	* XmlTextReader.cs : Added missing ReadValueAs() override (hmm...
	  are they really worth overriding?)

2004-07-28  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlWriter.cs : Added new WriteStartAttribute(string).

2004-07-28  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlConvert.cs : Added 2.0 VerifyNMTOKEN() and internal WriteBinHex().
	* XmlQualifiedName.cs : Added internal static Parse().
	* XmlReader.cs : use XmlQualifiedName.Parse().