@@ -543,7 +543,11 @@ namespace System.Xml
 		}
 #endif
 
+#if NET_2_0
+		public override object ReadTypedValue ()
+#else
 		public object ReadTypedValue ()
+#endif
 		{
 			if (dtdReader == null)
 				return null;
