@@ -1,3 +1,14 @@
+2004-08-20  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* XmlTextReader.cs : Fixed EOF not to return true when it is just
+	  closed. Element and EndElement location is now adjusted to be the
+	  same as MS.NET does. This fixes bug #63505 and #63507.
+	  ResetState() now throws InvalidOperationException() as MS.NET does.
+
+	* WriteState.cs : added missing 2_0 enumeration.
+	* XmlReader.cs : ReadTypedValue() is virtual.
+	* XmlValidatingReader.cs : ReadTypedValue() is override under 2_0.
+
 2004-08-10  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* XmlValidatingReader.cs : Replaced XmlSchemaCollection with
